2017-01-12  Charlie Zender  <zender@uci.edu>

	* Fix bug introduced in 4.6.3 where hyperslabs involving UDUnits dates failed

	* Document ncsplit

2016-01-12  Henry Butowsky  <henryb@hush.com>

	* Add exit(value) function to ncap2 scripting. 'value' is
	propagated from the script to code using a custom Exception.
	This value is then returned by main() in ncap2.

2017-01-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha03 final changes';git push
	git tag -a 4.6.4-alpha03 -m 'Version 4.6.4-alpha03 new features: ncsplit segments work';git push --tags

	* ncsplit: Verified working on 250-year ACME beta simulation

	* ncsplit: Comment-out old Git hash code which fails with split files anyway

	* ncsplit: Sanity check that number of files on command line matches number predicted by date switches

	* ncsplit: Add outer loop over time segments

	* ncsplit: Fix parallel partial batch PID wait loop to enumerate over variables not files

2016-01-10  Henry Butowsky  <henryb@hush.com>

	* modify min_coord() to take and return an array of values (var or att)

2017-01-08  Charlie Zender  <zender@uci.edu>

	* ncsplit: Customize stdout messages

2017-01-07  Charlie Zender  <zender@uci.edu>

	* ncsplit: Split whenever input files are positional or from stdin or --ypf given

	* ncsplit: Add regridding

	* ncsplit: Add batch parallelism and --job_nbr

	* NCO 4.6.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha02 final changes';git push
	git tag -a 4.6.4-alpha02 -m 'Version 4.6.4-alpha02 new features: ncsplit, cnk_csh';git push --tags

	* Set/report chunk cache size in ncks (only) main(), not cnk_ini() when input file is netCDF4

	* ncsplit: Add error-checking on input file number

2017-01-03  Charlie Zender  <zender@uci.edu>

	* Crude ncsplit-functionality works in ncclimo

	* Fix cmd_mpi index error in ncremap

2017-01-02  Charlie Zender  <zender@uci.edu>
